# MeSync

./: Cargo.toml
src/: config.rs  main.rs
src/bot/: dispatcher.rs  main_menu.rs  mod.rs
src/bot/callbacks/: control_panel.rs  control_subscription.rs  mod.rs  policy.rs  settings.rs  subscription.rs
src/bot/callbacks/tasks/: create_task.rs  mod.rs  tasks.rs  types.rs
src/bot/commands/: mod.rs  start.rs
src/bot/subscriptions/: mod.rs
