[package]
name = "MeSync"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.28"
pretty_env_logger = "0.5.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15.7"
teloxide = { version = "0.17.0", features = ["macros", "ctrlc_handler"] }
reqwest = "0.12.24"
lazy_static = "1.5.0"
chrono = "0.4.42"

